--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </section>
 
     <section class="new-book-container">
-        <form class="add-book-form" action="">
+        <form class="add-book-form" action="index.html">
             <input class="title-input" type="text" placeholder="Title"><br><br>
             <input class="author-input" type="text" placeholder="Author"><br><br>
             <input class="add-book-btn" type="button" value="Add">
