--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Awesome Books</title>
 </head>
 <body>
-    <h1 class="title">Awesome books</h1>
+    <h1 class="title">All awesome books</h1>
+
     <section class="books-container">
 
     </section>
 
+    <hr class="section-devider">
+
     <section class="new-book-container">
-        <h2 class="new-book-title">Add New Book</h2>
+        <h2 class="new-book-title">Add a new book</h2>
         <form class="add-book-form" action="index.html">
             <input class="title-input" type="text" placeholder="Title">
             <input class="author-input" type="text" placeholder="Author">
