add NavBar and styled

--- a/index.html
+++ b/index.html
@@ -9,9 +9,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">   
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
     <title>Awesome Books</title>
 </head>
 <body>
+    <header>
+        <div class="menu-container">
+            <h2>Awesome Books</h2>
+            <nav class="principal-menu">
+                <ul>
+                    <li>List</li>
+                    <li class="middle-nav">Add New</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </div>
+      </header>
+
     <h1 class="title">All awesome books</h1>
 
     <section class="books-container">
