--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <h2>Awesome Books</h2>
                 <nav class="principal-menu">
                     <ul>
-                        <li>List</li>
-                        <li class="middle-nav">Add New</li>
-                        <li>Contact</li>
+                        <li><a href="#">List</a></li>
+                        <li class="middle-nav"><a href="#">New</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -42,6 +42,20 @@
                 <input class="author-input" type="text" placeholder="Author">
                 <input class="add-book-btn" type="button" value="Add">
             </form>
+        </section>
+
+        <section class="contact">
+            <h2>Contact Information</h2>
+            <p>Do you have any question or you just want to say "Hello"? <br> 
+                You can reach out to us!</p>
+            <div class="list">
+                <ul>
+                    <li>Our email mail@mail.com</li>
+                    <li>Our Phone number +123546879</li>
+                    <li>Our adress Fwy Fort Road, Houston TX</li>
+                </ul>
+            </div>
+            
         </section>
     
         <footer>
